# Project-RIPRA

./: .clang-format  .git_commit_msg.txt  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Code of Conduct.md  Dockerfile  LICENSE  Project RIPRA (ऋप्र) — Project Overview.md  README.md  RIPRA_Audit_and_Issue_Backlog.md  SECURITY.md  planning.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: update_changelog.py
.github/workflows/: auto-changelog.yml  ci.yml
benchmarks/: baseline.json
config/: README.md  default.yaml
docs/: README.md  RIPRA_Audit_Report_BAH2026.md  algorithms.md  api_reference.md  build_guide.md  deployment_guide.md  dm_mapping.md  fpga_deployment.md  future_phases.md  labels.md  mathematical_foundation.md  performance.md  problem_statement_alignment.md  research-material.md  turbulence_characterization.md  wavefront_reconstruction.md
docs/audit/: Audit.tex  RIPRA_Audit_and_Issue_Backlog.md
docs/paper/: presentation.html  presentation.md  rippra_paper.tex
notebook/: Kaggle_RIPRA_ML_Pipeline.ipynb  Kaggle_RIPRA_ML_Pipeline_baseline.ipynb  Kaggle_RIPRA_WFS_Predictive_AO_Pipeline.ipynb  V1_Simulation_TEST.ipynb  V2_Simulation_Test.ipynb  kaggle_synthetic_shwfs_generator.ipynb  kaggle_synthetic_shwfs_generator.py  ripra_simulation_ultimate_testbed.ipynb
rippra/: build.bat  build.sh  build_benchmark.bat  build_cuda.sh  build_cuda_test.bat  build_dll.bat  build_openmp.bat  build_test_pipeline.bat  build_test_recon.bat  build_test_stream.bat  build_tests_openmp.bat  check_dataset.py  quick_gpu_bench.py  run_benchmark.bat  run_test_pipeline.bat  run_test_recon.bat  run_test_stream.bat  test_omp_compile.bat
rippra/bindings/: README.md  __init__.py  onnx_inference.py  rippra.py  test_bindings.py
rippra/config/: system.conf
rippra/cuda/: README.md  centroid_kernels.cu  dm_kernels.cu  matrix_kernels.cu  rippra_cuda.h
rippra/include/rippra/: centroid.h  io.h  la.h  predictive_ao.h  recon.h  rippra_api.h  simd.h  stream.h
rippra/ml/: README.md  ablation_study.py  baseline_comparison.py  benchmark_gpu.py  benchmark_onnx_latency.py  evaluate_inference.py  evaluate_sequence.py  export_onnx.py  models.py  noise_robustness.py  performance_profile.py  predictive_ao.py  sequence_models.py  synthetic_shwfs.py  test_onnx_models.py  train.py  train_sequence.py
rippra/onnx_models/: wavefront_cnn.onnx  wavefront_lstm.onnx  wavefront_mlp.onnx
rippra/scratch/: create_notebook.py
rippra/src/: README.md  centroid.c  io.c  la.c  predictive_ao.c  recon.c  rippra_api.c  simd.c  simd_avx2.c  stream.c
rippra/tests/: README.md  benchmark_centroid.c  benchmark_cuda_vs_cpu.cu  benchmark_end_to_end.c  benchmark_openmp.c  benchmark_simd.c  doc_example.c  test_centroid.c  test_closed_loop.c  test_cuda.c  test_full_pipeline.c  test_golden_values.c  test_io.c  test_la.c  test_malformed_input.c  test_minimal.c  test_recon.c  test_simd.c  test_split_leakage.py  test_stream.c
rippra/tools/: README.md  create_ultimate_notebook.py  gen_test_data.c  generate_dataset.py  generate_realistic_ts.py  npy_to_raw.py  reproduce_all.py
rippra/viz/: README.md  animate_wavefront.py  dashboard.py  dm_heatmap.py  generate_3d_animation.py  performance_monitor.py  pipeline_dashboard.py  turbulence_dashboard.py  wavefront_viz.py  zernike_dashboard.py
tools/: benchmark_scaling.sh  check_benchmark_regression.py
visualizations/: animated_wavefront.html  index.html  pipeline_dashboard.html  wavefront_3d_viewer.html
